--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.14.1",
     "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.12.2",
     "react": "^18.3.1",
